--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 <body>
     <header>
         <div class="navbar">
-            <div class="nav-items">
-                <img src="/img/f96a261e5a60d7d66b36e2850e3eb19b.png" alt="logo">
+
+            <div class="logo"><img src="https://img.freepik.com/free-vector/ornamental-golden-decorative-floral-frame-background_1035-19364.jpg?t=st=1655749699~exp=1655750299~hmac=b976ea24cc869773da863adf6210eb2c3a51d5a84e0ac40c839989e18f7948dc&w=740" alt="logo"></div>
+            <div class="items">
                 <a href="#">Shop<i class="bi bi-chevron-down"></i></a>
                 <a href="#">Home Decor<i class="bi bi-chevron-down"></i></a>
                 <a href="#">Festive Decor</a>
                 <a href="#">Corporate Gifting</a>    
             </div>
 
-            <div class="nav-items-right">
+            <div class="icons">
                 <a href="#"><i class="bi bi-search"></i> <br> Search</a>
                 <a href="#"><i class="bi bi-bag"></i> <br> cart</a>
             </div>
